syntax = "proto3";
// version: 1.0.0

package edger.hub.v1.link;

import "google/protobuf/any.proto";

service LinkHub {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc Handle(AppRequest) returns (AppResponse) {}
  rpc Subscribe(AppSubscribe) returns (stream AppEvent) {}
}

message AuthRequest {
  uint64 ord = 1;
  string app_id = 2;
  string link_id = 3;
  string token = 4;
  google.protobuf.Any extra = 5;
}

message AuthResponse {
  uint64 ord = 1;
  string session_id = 2;
  string trace_id = 3;
  google.protobuf.Any extra = 4;
}

message AppRequest {
  uint64 ord = 1;
  string session_id = 2;
  google.protobuf.Any data = 3;
}

message AppResponse {
  uint64 ord = 1;
  string session_id = 2;
  string trace_id = 3;
  google.protobuf.Any data = 4;
}

message AppSubscribe {
  uint64 ord = 1;
  string session_id = 2;
  string topic = 3;
}

message AppEvent {
  uint64 ord = 1;
  string trace_id = 2;
  string topic = 3;
  google.protobuf.Any data = 4;
}
